--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     
 
-    <meta name="description" content="Get testnet tokens to use on the Fomo Testnet Network (testnet) or a Subnet chain in one place.">
-    <meta name="keywords" content="Fomo, Faucet, , Testnet">
+    <meta name="description" content="Get testnet tokens to use on the Lumia Testnet Network (testnet) or a Subnet chain in one place.">
+    <meta name="keywords" content="Lumia, Faucet, , Testnet">
     
-    <meta property="og:title" content="Fomo Faucet">
-    <meta property="og:site_name" content="Faucet | Fomo">
+    <meta property="og:title" content="Lumia Faucet">
+    <meta property="og:site_name" content="Faucet | Lumia">
     <meta property="og:url" content="https://faucet.fomochain.io">
-    <meta property="og:description" content="Get testnet tokens to use on the Fomo Testnet Network (testnet) or a Subnet chain in one place.">
+    <meta property="og:description" content="Get testnet tokens to use on the Lumia Testnet Network (testnet) or a Subnet chain in one place.">
     <meta property="og:type" content="website">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Faucet | Fomo</title>
+    <title>Faucet | Lumia</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
