--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,21 +2,21 @@
 <html lang="en" style="width: 100%; height: 100%;">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/faucet-icon-dark.svg" />
+    <link rel="icon" href="%PUBLIC_URL%/faucet-icon-dark.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     
 
-    <meta name="description" content="Get testnet tokens to use on the Lumia Testnet Network (testnet) or a Subnet chain in one place.">
-    <meta name="keywords" content="Lumia, Faucet, , Testnet">
+    <meta name="description" content="Get testnet tokens to use on the Zeeve Testnet Network (testnet) or a Subnet chain in one place.">
+    <meta name="keywords" content="Zeeve, Faucet, , Testnet">
     
-    <meta property="og:title" content="Lumia Faucet">
-    <meta property="og:site_name" content="Faucet | Lumia">
+    <meta property="og:title" content="Zeeve Faucet">
+    <meta property="og:site_name" content="Faucet | Zeeve">
     <meta property="og:url" content="https://faucet.fomochain.io">
-    <meta property="og:description" content="Get testnet tokens to use on the Lumia Testnet Network (testnet) or a Subnet chain in one place.">
+    <meta property="og:description" content="Get testnet tokens to use on the Zeeve Testnet Network (testnet) or a Subnet chain in one place.">
     <meta property="og:type" content="website">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Faucet | Lumia</title>
+    <title>Faucet | Zeeve</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
