--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,21 +2,20 @@
 <html lang="en" style="width: 100%; height: 100%;">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/faucet-icon-dark.png" />
+    <link rel="icon" href="%REACT_APP_FAVICON%" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     
-
-    <meta name="description" content="Get testnet tokens to use on the Zeeve Testnet Network (testnet) or a Subnet chain in one place.">
-    <meta name="keywords" content="Zeeve, Faucet, , Testnet">
+    <meta name="description" content="Get testnet tokens to use on the %REACT_APP_NAME% Testnet Network (testnet) or a Subnet chain in one place.">
+    <meta name="keywords" content="%REACT_APP_NAME%, Faucet, , Testnet">
     
-    <meta property="og:title" content="Zeeve Faucet">
-    <meta property="og:site_name" content="Faucet | Zeeve">
+    <meta property="og:title" content="%REACT_APP_NAME% Faucet">
+    <meta property="og:site_name" content="Faucet | %REACT_APP_NAME%">
     <meta property="og:url" content="https://faucet.fomochain.io">
-    <meta property="og:description" content="Get testnet tokens to use on the Zeeve Testnet Network (testnet) or a Subnet chain in one place.">
+    <meta property="og:description" content="Get testnet tokens to use on the %REACT_APP_NAME% Testnet Network (testnet) or a Subnet chain in one place.">
     <meta property="og:type" content="website">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Faucet | Zeeve</title>
+    <title>Faucet | %REACT_APP_NAME%</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
